fix: pubs spacing

--- a/sass/parts/_pubs.scss
+++ b/sass/parts/_pubs.scss
@@ -7,7 +7,7 @@
   }
   
   .publist-item {
-    margin-bottom: 1.8rem;
+    // margin-bottom: 1.8rem;
     background-color: var(--bg-darker);
     padding: 1rem;
     border-radius: 20px;
